AX: Incorrect role on dynamic lists https://bugs.webkit.org/show_bug.cgi?id=238831

Reviewed by Andres Gonzalez.

Source/WebCore:

AccessibilityList objects cache their role after running
AccessibilityNodeObject::determineAccessibilityRole, but we never
recomputed it when necessary.

With this patch, when the children of a list changes, we also
re-compute its role, since a list's role is dependent on its children.

Test: accessibility/list-with-dynamically-changing-content.html

* accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::handleChildrenChanged):
(WebCore::AXObjectCache::handleRoleChange):
(WebCore::AXObjectCache::handleAriaRoleChanged):
Renamed to handleRoleChange.
* accessibility/AXObjectCache.h:
(WebCore::AXObjectCache::handleRoleChange):
(WebCore::AXObjectCache::handleAriaRoleChanged):
Renamed to handleRoleChange.
* accessibility/AccessibilityNodeObject.cpp:
(WebCore::AccessibilityNodeObject::updateRole):
(WebCore::AccessibilityNodeObject::updateAccessibilityRole):
Renamed to updateRole.
* accessibility/AccessibilityNodeObject.h:
* accessibility/AccessibilityObject.h:
(WebCore::AccessibilityObject::updateRole):
(WebCore::AccessibilityObject::updateAccessibilityRole):
Renamed to updateRole.
* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::updateRoleAfterChildrenCreation):
* accessibility/AccessibilityTable.cpp:
(WebCore::AccessibilityTable::addChildren):

LayoutTests:

* accessibility/list-with-dynamically-changing-content-expected.txt: Added.
* accessibility/list-with-dynamically-changing-content.html: Added.
* platform/ios/accessibility/list-with-dynamically-changing-content-expected.txt: Added.
* platform/ios/TestExpectations: Enable new test.
* platform/win/TestExpectations: Skip new test.

Canonical link: https://commits.webkit.org/249558@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@292774 268f45cc-cd09-0410-ab3c-d52691b4dbfc